--- a/fully-youtube-app/package.json
+++ b/fully-youtube-app/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "firebase": "^10.8.1",
+    "moment": "^2.30.1",
     "node-sass": "^9.0.0",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
