--- a/fully-youtube-app/package.json
+++ b/fully-youtube-app/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.30.1",
     "node-sass": "^9.0.0",
     "numeral": "^2.0.6",
+    "or": "^0.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-show-more-text": "^1.7.1",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
