--- a/youtube-app/package.json
+++ b/youtube-app/package.json
@@ -10,16 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "firebase": "^10.8.1",
+    "google-auth-library": "^9.7.0",
     "moment": "^2.30.1",
     "node-sass": "^9.0.0",
     "numeral": "^2.0.6",
     "or": "^0.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-lazy-load": "^4.0.1",
@@ -41,6 +42,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "sass": "^1.72.0",
     "vite": "^5.2.0"
   }
 }
