--- a/flowBoardApp/package.json
+++ b/flowBoardApp/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.16.6",
     "@reduxjs/toolkit": "^2.2.7",
     "firebase": "^10.12.5",
+    "firebase-functions": "^5.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
