--- a/flowBoardApp/package.json
+++ b/flowBoardApp/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.12.5",
     "firebase-functions": "^5.0.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0"
