--- a/flowBoardApp/.gitignore
+++ b/flowBoardApp/.gitignore
@@ -29,3 +29,4 @@ dist-ssr
 firebase-export-1723592584050klvrWN
 firebase-export-17232514119702bpSfx/
 firebase-export-17235925843462dp5Rq/
+all_kinds/
