--- a/socialMediaApp/social-functions/firebase.json
+++ b/socialMediaApp/social-functions/firebase.json
@@ -29,6 +29,13 @@
     "ui": {
       "enabled": true
     },
-    "singleProjectMode": true
+    "singleProjectMode": true,
+    "storage": {
+      "port": 9199,
+      "rules": "storage.rules"
+    },
+    "tasks": {
+      "port": 9499
+    }
   }
 }
