--- a/socialMediaApp/social-functions/firebase.json
+++ b/socialMediaApp/social-functions/firebase.json
@@ -24,7 +24,7 @@
       "port": 5001
     },
     "firestore": {
-      "port": 8080
+      "port": 8081
     },
     "ui": {
       "enabled": true
@@ -37,5 +37,8 @@
     "tasks": {
       "port": 9499
     }
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
